--- a/www/index.html
+++ b/www/index.html
@@ -64,31 +64,41 @@
 
   <script>
 
-  sessionStorage.perguntasFaceis = '[';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Complete a sequência corretamente: 86, 85, 83, 80, 76...","resposta":"71", "nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Em um arquipélago existem 3 ilhas, cada ilha tem 3 palmares, se três palmeiras dão três cocos, qual o número total de cocos?","resposta":"0","nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Em uma família há três mães, três filhas, duas avós, duas netas, uma bisavó e uma bisneta. Quantas pessoas compõem essa família?", "resposta":"4", "nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Andando por uma rua, um homem conta, à sua direita, 39 árvores. Quando estava voltando para sua casa, conta, à sua esquerda, 39 árvores. Quantas árvores diferentes viu ao todo?","resposta":"39","nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Um relógio digital marca 19:57:33. Qual o número mínimo de segundos que devem passar até que se alterem todos os algarismos?", "resposta":"147", "nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Um pequeno caminhão pode carregar 50 sacos de areia ou 400 tijolos. Se foram colocados no caminhão 32 sacos de areia, quantos tijolos pode ainda ele carregar?","resposta":"144","nível":"facil"},';
-  sessionStorage.perguntasFaceis += '{"pergunta":"Dois homens cavam um buraco em 4 dias. Quantos dias eles levariam para cavar meio buraco?", "resposta":"0","nível":"facil"}';
-  sessionStorage.perguntasFaceis += ']';
+  localStorage.perguntasFaceis = '[';
+  localStorage.perguntasFaceis += '{"pergunta":"Complete a sequência corretamente: 86, 85, 83, 80, 76...","resposta":"71", "nível":"facil"},';
+  localStorage.perguntasFaceis += '{"pergunta":"Em um arquipélago existem 3 ilhas, cada ilha tem 3 palmares, se três palmeiras dão três cocos, qual o número total de cocos?","resposta":"0","nível":"facil"},';
+  localStorage.perguntasFaceis += '{"pergunta":"Em uma família há três mães, três filhas, duas avós, duas netas, uma bisavó e uma bisneta. Quantas pessoas compõem essa família?", "resposta":"4", "nível":"facil"},'; 
+  localStorage.perguntasFaceis += '{"pergunta":"Dois homens cavam um buraco em 4 dias. Quantos dias eles levariam para cavar meio buraco?", "resposta":"0","nível":"facil"}';
+  localStorage.perguntasFaceis += ']';
 
-  sessionStorage.perguntasMedias = '[';
-  sessionStorage.perguntasMedias += '{"pergunta":"2, 10, 12, 16, 17, 18, 19, ...?", "resposta":"200", "nível":"medio"},' ;
-  sessionStorage.perguntasMedias += '{"pergunta":"A Maria e o Manuel disputaram um jogo no qual são atribuídos 2 pontos por vitória e é retirado um ponto por derrota. Inicialmente cada um tinha 5 pontos. Se o Manuel ganhou exatamente 3 partidas, e a Maria no final ficou com 10 pontos, quantas partidas eles disputaram?", "resposta":"7", "nível":"medio"},';
-  sessionStorage.perguntasMedias += '{"pergunta":"Complete a sequência: 143, 120, 99, 80, 63, 48, ?", "resposta":"35", "nível":"medio"},';
-  sessionStorage.perguntasMedias += '{"pergunta":"Se HI = 68, FH = ??", "resposta":"89","nível":"medio"}';
-  sessionStorage.perguntasMedias += ']';
+  localStorage.perguntasMedias = '[';
+  localStorage.perguntasMedias += '{"pergunta":"2, 10, 12, 16, 17, 18, 19, ...?", "resposta":"200", "nível":"medio"},' ;
+  localStorage.perguntasMedias += '{"pergunta":"A Maria e o Manuel disputaram um jogo no qual são atribuídos 2 pontos por vitória e é retirado um ponto por derrota. Inicialmente cada um tinha 5 pontos. Se o Manuel ganhou exatamente 3 partidas, e a Maria no final ficou com 10 pontos, quantas partidas eles disputaram?", "resposta":"7", "nível":"medio"},';
+  localStorage.perguntasMedias += '{"pergunta":"Complete a sequência: 143, 120, 99, 80, 63, 48, ?", "resposta":"35", "nível":"medio"},';
+  localStorage.perguntasMedias += '{"pergunta":"Se HI = 68, FH = ??", "resposta":"89","nível":"medio"}';
+  localStorage.perguntasMedias += ']';
 
-  sessionStorage.perguntasDificeis = '[';
-  sessionStorage.perguntasDificeis += '{"pergunta":"Na casa de João haviam 3 laranjas. Sua mãe, achando que eram poucas, pediu para que ele fosse na feira de seu José e comprasse mais. Chegando lá, João comprou dezesete laranjas, voltou para casa, e as entregou para sua mãe. Quantas laranjas haviam ao todo, no final disso, na casa de João?","resposta":"10", "nível":"dificil"},';
-  sessionStorage.perguntasDificeis += '{"pergunta":"12 + 4 = 48, 27 + 2 = 87, 35 + 8 = ?", "resposta":"129", "nível":"dificil"},';
-  sessionStorage.perguntasDificeis += '{"pergunta":"MATEMÁTICA = 86, JUNHO = 68, ABRIL = ?", "resposta":"42", "nível":"dificil"},';
-  sessionStorage.perguntasDificeis += '{"pergunta":"A história conservou poucos dados sobre Diofanto. Tudo o que se conhece a seu respeito encontra-se no seguinte epigrama que figura no seu túmulo e está escrito sob a forma de um enigma matemático: Caminhante! Aqui estão sepultados os restos de Diofanto. E os números podem mostrar (milagre!) quão longa foi a sua vida, cuja sexta parte foi a sua bela infância. Tinha decorrido mais uma duodécima parte de sua vida, quando seu rosto se cobriu de pêlos. E a sétima parte de sua existência decorreu com um casamento estéril. Passou mais um quinquênio e ficou feliz com o nascimento de seu querido primogênito, cuja bela existência durou apenas metade da de seu pai, que com muita pena de todos desceu à sepultura quatro anos depois do enterro de seu filho. Quantos anos durou o casamento estéril de Diofanto?", "resposta":"12", "nível":"dificil"}';
-  sessionStorage.perguntasDificeis += ']';
+  localStorage.perguntasDificeis = '[';
+  localStorage.perguntasDificeis += '{"pergunta":"Na casa de João haviam 3 laranjas. Sua mãe, achando que eram poucas, pediu para que ele fosse na feira de seu José e comprasse mais. Chegando lá, João comprou dezesete laranjas, voltou para casa, e as entregou para sua mãe. Quantas laranjas haviam ao todo, no final disso, na casa de João?","resposta":"10", "nível":"dificil"},';
+  localStorage.perguntasDificeis += '{"pergunta":"12 + 4 = 48, 27 + 2 = 87, 35 + 8 = ?", "resposta":"129", "nível":"dificil"},';
+  localStorage.perguntasDificeis += '{"pergunta":"MATEMÁTICA = 86, JUNHO = 68, ABRIL = ?", "resposta":"42", "nível":"dificil"},';
+  localStorage.perguntasDificeis += '{"pergunta":"A história conservou poucos dados sobre Diofanto. Tudo o que se conhece a seu respeito encontra-se no seguinte epigrama que figura no seu túmulo e está escrito sob a forma de um enigma matemático: Caminhante! Aqui estão sepultados os restos de Diofanto. E os números podem mostrar (milagre!) quão longa foi a sua vida, cuja sexta parte foi a sua bela infância. Tinha decorrido mais uma duodécima parte de sua vida, quando seu rosto se cobriu de pêlos. E a sétima parte de sua existência decorreu com um casamento estéril. Passou mais um quinquênio e ficou feliz com o nascimento de seu querido primogênito, cuja bela existência durou apenas metade da de seu pai, que com muita pena de todos desceu à sepultura quatro anos depois do enterro de seu filho. Quantos anos durou o casamento estéril de Diofanto?", "resposta":"12", "nível":"dificil"}';
+  localStorage.perguntasDificeis += ']';
 
+  var json = JSON.parse(localStorage.perguntasFaceis);
+  localStorage.questaoAtual = 1;
 
+  localStorage.primeira = Math.floor((Math.random() * json.length));
+  localStorage.segunda = Math.floor((Math.random() * json.length));
+  while(localStorage.segunda == localStorage.primeira){
+    localStorage.segunda = Math.floor((Math.random() * json.length));
+  }
+  localStorage.terceira = Math.floor((Math.random() * json.length));
+  while(localStorage.terceira == localStorage.segunda || localStorage.terceira == localStorage.primeira){
+    localStorage.terceira = Math.floor((Math.random() * json.length));
+  }
+
+  console.log("entrou no index");
 
   </script>
 </html>
